@@ -53,14 +53,14 @@ if test -f /etc/debian_version && test x"$tor_$1_$2_debian" != x; then
 fi
 if test -f /etc/fedora-release && test x"$tor_$1_$2_redhat" != x; then
   AC_WARN([On Fedora Core, you can install$h $1 using "yum install $tor_$1_$2_redhat"])
-  if test x"$tor_$1_$2_redhat != x"$tor_$1_devpkg_redhat"; then 
-    AC_WARN([   You will probably need $tor_$1_devpkg_redhat too.])
+  if test x"$tor_$1_$2_redhat" != x"$tor_$1_devpkg_redhat"; then 
+    AC_WARN([   You will probably need to install $tor_$1_devpkg_redhat too.])
   fi 
 else
   if test -f /etc/redhat-release && test x"$tor_$1_$2_redhat" != x; then
     AC_WARN([On most Redhat-based systems, you can get$h $1 by installing the $tor_$1_$2_redhat" RPM package])
     if test x"$tor_$1_$2_redhat" != x"$tor_$1_devpkg_redhat"; then 
-      AC_WARN([   You will probably need $tor_$1_devpkg_redhat too.])
+      AC_WARN([   You will probably need to install $tor_$1_devpkg_redhat too.])
     fi 
   fi
 fi
